2001-09-17  Lauris Kaplinski  <lauris@ximian.com>

	* src/dialogs/gradient-vector.c (sp_gradient_vector_widget_destroy): Handler
	(sp_gradient_vector_gradient_destroy): Ditto
	(sp_gradient_vector_gradient_modified): Ditto
	(sp_gradient_vector_color_dragged): Ditto
	(sp_gradient_vector_color_changed): Ditto
	(sp_gradient_vector_widget_load_gradient): Connect/disconnect signals,
	handle NULL gradient etc.

	* src/sp-gradient.c (sp_gradient_set_vector): New method

	* src/widgets/gradient-image.c (sp_gradient_image_update): New method
	(sp_gradient_image_gradient_modified): Handler
	(sp_gradient_image_gradient_destroy): Ditto
	(sp_gradient_image_set_gradient): New method
	(sp_gradient_image_unrealize): Implement
	(sp_gradient_image_realize): Ditto

2001-09-16  Lauris Kaplinski  <lauris@ximian.com>

	* src/dialogs/gradient-selector.c (sp_gradient_widget_new): Added buttons
	(sp_gradient_selector_edit_vector_clicked): Handler

	* src/sp-defs.c (sp_defs_build): Use attach method

2001-09-15  Lauris Kaplinski  <lauris@ximian.com>

	* src/sp-gradient.c: Added radial gradient

	* src/sp-gradient.h: Ditto

	* src/sp-paint-server.c (sp_paint_server_destroy): Do not leak painters

	* src/gradient-chemistry.c (sp_gradient_ensure_vector_normalized): New method
	(sp_item_force_fill_lineargradient_vector): Ditto

	* src/sp-object.h (SP_OBJECT_STYLE): New macro

2001-09-14  Lauris Kaplinski  <lauris@ximian.com>

	* src/zoom-context.c (sp_zoom_2_to_1): Noop if no active desktop
	(sp_zoom_1_to_2): Ditto

2001-09-07  Lauris Kaplinski  <lauris@ximian.com>

	* src/sp-header.c: New file, implements document header, consisting
	of nested <defs> nodes, for different resource definitions

	* src/sp-header.h: New file

	* src/forward.h: Added SPHeader forward typedefs

2001-09-05  Lauris Kaplinski  <lauris@ximian.com>

	* src/document.c (sp_document_del_repr): Moved here, commented out
	(sp_document_add_repr): Moved here, made non-item compatible
